no jdk19 for vertx module & package name change
Signed-off-by: debasishbsws <debasishbsws.abc@gmail.com>