@@ -28,34 +28,18 @@
 
   <name>dispatcher-vertx</name>
 
-
-  <properties>
-    <java.version>19</java.version>
-  </properties>
-
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+      <groupId>dev.knative.eventing.kafka.broker</groupId>
+      <artifactId>dispatcher</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
-  <build>
+  <!-- <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-compiler-plugin</artifactId>
-      <version>${maven.compiler.plugin.version}</version>
-      <configuration>
-        <source>${java.version}</source>
-        <target>${java.version}</target>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
-      </configuration>
-      </plugin>
+
     </plugins>
-  </build>
+  </build> -->
+
 </project>
